force-app/main/default/objects/fw1__Plan_Installment__c/fields/fw1__Installment_Date__c.field-meta.xml
<CustomField>
    <fullName>fw1__Installment_Date__c</fullName>
    <inlineHelpText>You may enter an exact date here if you don&apos;t want the installment date to be computed based on the schedule</inlineHelpText>
    <label>Installment Date</label>
    <type>Date</type>
</CustomField>