force-app/main/default/objects/fw1__Plan_Installment__c/fields/fw1__Installment_Number__c.field-meta.xml
<CustomField>
    <fullName>fw1__Installment_Number__c</fullName>
    <label>Installment Number</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>