force-app/main/default/objects/fw1__Plan_Installment__c/fields/fw1__Installment_Percentage__c.field-meta.xml
<CustomField>
    <fullName>fw1__Installment_Percentage__c</fullName>
    <label>Installment Percentage</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>