force-app/main/default/objects/fw1__Plan_Installment__c/fields/fw1__Payment_Plan__c.field-meta.xml
<CustomField>
    <fullName>fw1__Payment_Plan__c</fullName>
    <label>Payment Plan</label>
    <referenceTo>fw1__Payment_Plan__c</referenceTo>
    <relationshipLabel>Plan Installments</relationshipLabel>
    <relationshipName>Plan_Installments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>