force-app/main/default/objects/fw1__Plan_Installment__c/fields/fw1__Use_Current_Date_As_Installment_Date__c.field-meta.xml
<CustomField>
    <fullName>fw1__Use_Current_Date_As_Installment_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Current Date As Installment Date</label>
    <type>Checkbox</type>
</CustomField>